Revision history for Email-Sender

{{$NEXT}}

0.093380  2009-12-04 12:29:55 America/New_York
          bump Moose prereq to 0.70 based on feedback from ANDK

0.093110  2009-11-07
          allow uppercase env vars to set transport attributes (charsbar)
          add "message" attribute to successes returned by SMTP transports

0.092840  2009-10-10
          fix packaging error

0.092820  2009-10-09
          improve reliability of t/sendmail.t (thanks, Mark Grimes)

0.091940  2009-07-12
          packaging fixes (EU:MM version for LICENSE param) rt #47817

0.091930  2009-07-12
          add some more common sendmail locations to default search

0.091870  2009-07-06
          exclude unwanted methods from Email::Sender::Transport
          to suppress a new warning from Moose role composition

0.091740  2009-06-23
          no code changes
          remove prereq of Test::More 0.88; weird things happened

0.091661  2009-06-15
          THIS RELEASE MAY BREAK YOUR CODE... but probably not

          Email::Sender::Simple has been added, along with a manual
          Email::Sender is now a role
          Email::Sender::Transport is now a role, too; subclasses will break

0.004     2009-03-24
          require perl5 version 8
          move to Moose; let's not mess around, the Moose/Mouse stuff is not
          worth the minor savings

0.003     2009-03-12
          Sendmail transport now uses 2-arg open on Win32 so it can work at all
          Win32-friendly tests added for Sendmail by the ever-awesome DAGOLDEN

0.002     2009-01-31
          fix minor documentation errors

0.001     2009-01-02
          SQLite transport split into its own dist, removed from this
          QUIT when ending a transmission in non-persist SMTP

0.000     2008-12-10
          first CPAN demo release; It Probably Works!
