@@ -7,12 +7,14 @@ copyright_holder = Ricardo Signes
 
 [Prereq]
 ; NON-CORE PREREQUISITES
-Moose            = 0.70 ; based on feedback from ANDK looking at testers
+Capture::Tiny    = 0 ; for testing
 Email::Abstract  = 3 ; XXX: really use Abstract?; 3 = \$str
 Email::Address   = 0 ; used for env-from-msg (::Simple)
-Net::SMTP        = 0 ;
 List::MoreUtils  = 0 ; minimum version unknown; uniq
-Capture::Tiny    = 0 ; for testing
+Moose            = 0.70 ; based on feedback from ANDK looking at testers
+Net::SMTP        = 0 ;
+Try::Tiny        = 0 ; required by Moose, anyway
+Throwable::Error = 0.100090 ; with $obj->throw and ->throw($str)
 
 ; SOON TO NOT BE PREREQUISIES ?
 Email::Simple       = 1.998 ; needed(?) for ->header_obj
