@@ -1,9 +1,7 @@
 package Email::Sender::Failure;
 use Moose;
+extends 'Throwable::Error';
 # ABSTRACT: a report of failure from an email sending transport
-
-with 'Email::Sender::Role::HasMessage';
-use overload '""' => sub { $_[0]->message }, fallback => 1;
 
 =attr message
 
@@ -49,29 +47,10 @@ be used as the C<message> of the new failure.
 
 =cut
 
-sub throw {
-  my $inv = shift;
-  die $inv if ref $inv;
-  die $inv->new(@_);
-}
-
 sub BUILD {
   my ($self) = @_;
   confess("message must contain non-space characters")
     unless $self->message =~ /\S/;
-}
-
-sub BUILDARGS {
-  my ($self, @args) = @_;
-
-  return {} unless @args;
-  return {} if @args == 1 and ! defined $args[0];
-
-  if (@args == 1 and (!ref $args[0]) and defined $args[0] and length $args[0]) {
-    return { message => $args[0] };
-  }
-
-  return $self->SUPER::BUILDARGS(@args);
 }
 
 =head1 SEE ALSO
@@ -88,6 +67,6 @@ sub BUILDARGS {
 
 =cut
 
-__PACKAGE__->meta->make_immutable;
+__PACKAGE__->meta->make_immutable(inline_constructor => 0);
 no Moose;
 1;
