@@ -49,6 +49,6 @@ sub isa {
   return $self->SUPER::isa($class);
 }
 
-__PACKAGE__->meta->make_immutable;
+__PACKAGE__->meta->make_immutable(inline_constructor => 0);
 no Moose;
 1;
